force-app/main/default/objects/Case/fields/Chute_confirmee__c.field-meta.xml
<CustomField>
    <fullName>Chute_confirmee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chute confirmée</label>
    <type>Checkbox</type>
</CustomField>