force-app/main/default/objects/Case/fields/Cloturee_automatiquement__c.field-meta.xml
<CustomField>
    <fullName>Cloturee_automatiquement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clôturée automatiquement</label>
    <type>Checkbox</type>
</CustomField>