force-app/main/default/objects/Case/fields/Consignes_de_visite__c.field-meta.xml
<CustomField>
    <fullName>Consignes_de_visite__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consignes de visite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>