force-app/main/default/objects/Case/fields/Date_de_signature_de_convention__c.field-meta.xml
<CustomField>
    <fullName>Date_de_signature_de_convention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de signature de convention</label>
    <type>Date</type>
</CustomField>