force-app/main/default/objects/Case/fields/Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Debut</label>
    <type>DateTime</type>
</CustomField>