force-app/main/default/objects/Case/fields/date_en_cours__c.field-meta.xml
<CustomField>
    <fullName>date_en_cours__c</fullName>
    <description>La date quand le staut passe à &quot;en cours&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date passage en cours</label>
    <type>DateTime</type>
</CustomField>