force-app/main/default/objects/Case/fields/Date_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Fin</label>
    <type>DateTime</type>
</CustomField>