force-app/main/default/objects/Case/fields/date_mise_attente__c.field-meta.xml
<CustomField>
    <fullName>date_mise_attente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Mise Attente</label>
    <type>DateTime</type>
</CustomField>