force-app/main/default/objects/Case/fields/Date_prochaine_action__c.field-meta.xml
<CustomField>
    <fullName>Date_prochaine_action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date prochaine action</label>
    <type>Date</type>
</CustomField>