force-app/main/default/objects/Case/fields/Description_champ_technique__c.field-meta.xml
<CustomField>
    <fullName>Description_champ_technique__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>