force-app/main/default/objects/Case/fields/Duree_de_traitement__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_traitement__c</fullName>
    <formula>IF( AND( ISPICKVAL(Status, &apos;En cours&apos;) , En_attente__c ==false  ) , TEXT(FLOOR(now() - date_en_cours__c)) &amp; &quot; Day(s) &quot; &amp; TEXT(ROUND(MOD((now() - date_en_cours__c)*24,24),0)) &amp;&quot; Hour(s) &quot; &amp; TEXT(ROUND(MOD((now() - date_en_cours__c)*1440,60),0)) &amp;&quot; Minute(s) &quot;	  , 
					 IF( AND( ISPICKVAL(Status, &apos;En cours&apos;) , En_attente__c ==true  ) ,TEXT(FLOOR(date_mise_attente__c - date_en_cours__c)) &amp; &quot; Day(s) &quot; &amp; TEXT(ROUND(MOD((date_mise_attente__c - date_en_cours__c)*24,24),0)) &amp;&quot; Hour(s) &quot; &amp; TEXT(ROUND(MOD((date_mise_attente__c - date_en_cours__c)*1440,60),0)) &amp;&quot; Minute(s) &quot;	 ,
									TEXT(FLOOR(ClosedDate - date_en_cours__c)) &amp; &quot; Day(s) &quot; &amp; TEXT(ROUND(MOD((ClosedDate - date_en_cours__c)*24,24),0)) &amp;&quot; Hour(s) &quot; &amp; TEXT(ROUND(MOD((ClosedDate - date_en_cours__c)*1440,60),0)) &amp;&quot; Minute(s) &quot;
								)
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de traitement</label>
    <type>Text</type>
</CustomField>