force-app/main/default/objects/Case/fields/Duree_Traitement_Analytic__c.field-meta.xml
<CustomField>
    <fullName>Duree_Traitement_Analytic__c</fullName>
    <formula>IF(
AND(ISPICKVAL(Status, &apos;En cours&apos;), En_attente__c == false),
ROUND((NOW() - date_en_cours__c) * 1440, 0),
IF(
AND(ISPICKVAL(Status, &apos;En cours&apos;), En_attente__c == true), 
ROUND((date_mise_attente__c - date_en_cours__c) * 1440, 0),
ROUND((ClosedDate - date_en_cours__c) * 1440, 0)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duree_Traitement_Analytic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>