force-app/main/default/objects/Case/fields/En_attente__c.field-meta.xml
<CustomField>
    <fullName>En_attente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En attente</label>
    <type>Checkbox</type>
</CustomField>