force-app/main/default/objects/Case/fields/J45__c.field-meta.xml
<CustomField>
    <fullName>J45__c</fullName>
    <label>J45</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>