force-app/main/default/objects/Case/fields/Jour_de_traitement__c.field-meta.xml
<CustomField>
    <fullName>Jour_de_traitement__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &gt;= DATE(2023,04,27), TODAY() - DATEVALUE(CreatedDate) + 1, TODAY() - DATEVALUE(CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etape J</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>