force-app/main/default/objects/Case/fields/MAIL_numero_paneliste__c.field-meta.xml
<CustomField>
    <fullName>MAIL_numero_paneliste__c</fullName>
    <formula>IF(
FIND(&quot; &quot;, Foyer_paneliste__r.Name) &gt; 0,
LEFT(Foyer_paneliste__r.Name, FIND(&quot; &quot;, Foyer_paneliste__r.Name)),
Foyer_paneliste__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAIL_numero_paneliste</label>
    <type>Text</type>
</CustomField>