force-app/main/default/objects/Case/fields/Motif_de_cloture__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_cloture__c</fullName>
    <label>Motif de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif avant appel</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
                <default>true</default>
                <label>Aucun</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>