force-app/main/default/objects/Case/fields/Motif_de_la_requete__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_la_requete__c</fullName>
    <label>Motif de la requête</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A oublié de retirer sa lettre</fullName>
            </value>
            <value>
                <fullName>A oublié de se déclarer</fullName>
            </value>
            <value>
                <fullName>A oublié d&apos;indiquer sa lettre</fullName>
            </value>
            <value>
                <fullName>A utilisé une autre lettre</fullName>
            </value>
            <value>
                <fullName>Abonnement Canal</fullName>
            </value>
            <value>
                <fullName>Abonnement hors foyer ou autre</fullName>
            </value>
            <value>
                <fullName>Abs</fullName>
            </value>
            <value>
                <fullName>Absence d&apos;audience justifiée</fullName>
            </value>
            <value>
                <fullName>Absence non déclarée</fullName>
            </value>
            <value>
                <fullName>Absence prolongée</fullName>
            </value>
            <value>
                <fullName>Absent du domicile - Audimètre débranché</fullName>
            </value>
            <value>
                <fullName>Ajout de coordonnées</fullName>
            </value>
            <value>
                <fullName>Ajout de poste</fullName>
            </value>
            <value>
                <fullName>Ajout de poste annulé</fullName>
            </value>
            <value>
                <fullName>Application non active</fullName>
            </value>
            <value>
                <fullName>Attribution d&apos;une touche à un enfant de moins de 4 ans</fullName>
            </value>
            <value>
                <fullName>Audience inférieure à 10min</fullName>
            </value>
            <value>
                <fullName>Audience sans présence</fullName>
            </value>
            <value>
                <fullName>Audience&gt; à X heures avec changement de chaîne</fullName>
            </value>
            <value>
                <fullName>Audiences atypiques</fullName>
            </value>
            <value>
                <fullName>Audiences constatées</fullName>
            </value>
            <value>
                <fullName>Autres abonnements</fullName>
            </value>
            <value>
                <fullName>Autres désabonnements</fullName>
            </value>
            <value>
                <fullName>Autres modifications</fullName>
            </value>
            <value>
                <fullName>Autres motifs</fullName>
            </value>
            <value>
                <fullName>Autres raisons</fullName>
            </value>
            <value>
                <fullName>Autres renseignements</fullName>
            </value>
            <value>
                <fullName>Autres usages justifié (utilisation de périphériques, VOD...)</fullName>
            </value>
            <value>
                <fullName>Autres usages justifié sans appel (utilisation de périphériques, VOD...)</fullName>
            </value>
            <value>
                <fullName>Autres usages non justifié (mauvaise audience =&gt; Collecte OK)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>