force-app/main/default/objects/Case/fields/Motif_de_statut__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_statut__c</fullName>
    <label>Motif de statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chute provisoire</fullName>
            </value>
            <value>
                <fullName>Chute définitive</fullName>
            </value>
            <value>
                <fullName>Injoignable</fullName>
            </value>
            <value>
                <fullName>Interventon finalisé</fullName>
            </value>
            <value>
                <fullName>Intervention annulé</fullName>
            </value>
            <value>
                <fullName>Résolue</fullName>
            </value>
            <value>
                <fullName>Reconnecté seul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>