force-app/main/default/objects/Case/fields/Niveau_de_batterie_Beacon__c.field-meta.xml
<CustomField>
    <fullName>Niveau_de_batterie_Beacon__c</fullName>
    <label>Niveau de batterie Beacon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>