force-app/main/default/objects/Case/fields/Nombre_de_controles__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_controles__c</fullName>
    <label>Nombre de contrôles</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>