force-app/main/default/objects/Case/fields/Nombre_de_tentatives_welcome_call__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_tentatives_welcome_call__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de tentatives d&apos;appels</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>