force-app/main/default/objects/Case/fields/Priority_requetes__c.field-meta.xml
<CustomField>
    <fullName>Priority_requetes__c</fullName>
    <formula>IF(
				TEXT(Priority) = $Label.CAS_Priorite_Eleve,
				IMAGE(&apos;/resource/drapeau_rouge&apos;,&apos;High&apos;,30,30),
				IF(
								TEXT(Priority) = $Label.CAS_Priorite_Moyen,
								IMAGE(&apos;/resource/drapeau_jaune&apos;,&apos;Medium&apos;,30,30),
								IF(
												TEXT(Priority) = $Label.CAS_Priorite_Faible,
												IMAGE(&apos;/resource/drapeau_vert&apos;,&apos;Low&apos;,30,30),
												&quot;&quot;
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priorité</label>
    <type>Text</type>
</CustomField>