force-app/main/default/objects/Case/fields/Process_Post_Etiquette_Motif__c.field-meta.xml
<CustomField>
    <fullName>Process_Post_Etiquette_Motif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process post étiquette / motif</label>
    <type>Checkbox</type>
</CustomField>