force-app/main/default/objects/Case/fields/Prochaine_action__c.field-meta.xml
<CustomField>
    <fullName>Prochaine_action__c</fullName>
    <label>Prochaine action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prendre rendez-vous pour une intervention</fullName>
            </value>
            <value>
                <fullName>Vérifier le solde de points</fullName>
            </value>
            <value>
                <fullName>Rappeler le foyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>