force-app/main/default/objects/Case/fields/RDD_description__c.field-meta.xml
<CustomField>
    <fullName>RDD_description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDD description</label>
    <type>Checkbox</type>
</CustomField>