force-app/main/default/objects/Case/fields/Rep_ou_non_rep__c.field-meta.xml
<CustomField>
    <fullName>Rep_ou_non_rep__c</fullName>
    <label>Rep ou non rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Répondant</fullName>
            </value>
            <value>
                <fullName>Non répondant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>