force-app/main/default/objects/Case/fields/Source_Requetes__c.field-meta.xml
<CustomField>
    <fullName>Source_Requetes__c</fullName>
    <formula>IF(
				TEXT(Origin) = $Label.CAS_Origine_Web,
				IMAGE(&apos;/resource/origine_web&apos;,&apos;Web&apos;,30,30),
				IF(
								TEXT(Origin) = $Label.CAS_Origine_Appel_Entrant,
								IMAGE(&apos;/resource/origine_telephone&apos;,&apos;Phone&apos;,30,30),
								IF(
												TEXT(Origin) = $Label.CAS_Origine_Appel_sortant,
												IMAGE(&apos;/resource/origine_telephone&apos;,&apos;Phone&apos;,30,30),
												IF(
																TEXT(Origin) = $Label.CAS_Origine_Email,
																IMAGE(&apos;/resource/origine_mail&apos;,&apos;Email&apos;,30,30),
																&quot;&quot;
												)
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Requêtes</label>
    <type>Text</type>
</CustomField>