force-app/main/default/objects/Case/fields/Sous_type__c.field-meta.xml
<CustomField>
    <fullName>Sous_type__c</fullName>
    <label>Sous-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Absence collecte</fullName>
            </value>
            <value>
                <fullName>Absence mouvement</fullName>
            </value>
            <value>
                <fullName>Adaptateur casque</fullName>
            </value>
            <value>
                <fullName>Anomalie affichage</fullName>
            </value>
            <value>
                <fullName>Anomalie autre</fullName>
            </value>
            <value>
                <fullName>Anomalie batterie</fullName>
            </value>
            <value>
                <fullName>Anomalie carte Sim</fullName>
            </value>
            <value>
                <fullName>Anomalie des données en base panel</fullName>
            </value>
            <value>
                <fullName>Anomalie horloge</fullName>
            </value>
            <value>
                <fullName>Anomalie informations</fullName>
            </value>
            <value>
                <fullName>Anomalie lors du traitement des données d&apos;audience</fullName>
            </value>
            <value>
                <fullName>A quitte la mesure</fullName>
            </value>
            <value>
                <fullName>Audience individuelle &gt;7h</fullName>
            </value>
            <value>
                <fullName>Audience individuelle &gt; 7h</fullName>
                <isActive>false</isActive>
                <label>Audience individuelle &gt; 7h</label>
            </value>
            <value>
                <fullName>Audimètre</fullName>
            </value>
            <value>
                <fullName>Audimètre non connecté</fullName>
            </value>
            <value>
                <fullName>Au moins 1 beacon batterie faible</fullName>
            </value>
            <value>
                <fullName>Au moins 1 beacon inactif</fullName>
            </value>
            <value>
                <fullName>Au moins 1 beacon jamais détecté</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Autre cause technique</fullName>
            </value>
            <value>
                <fullName>Autre déplacement</fullName>
            </value>
            <value>
                <fullName>Autre déplacement hors zone de mesure</fullName>
            </value>
            <value>
                <fullName>Autres usages</fullName>
            </value>
            <value>
                <fullName>Avis</fullName>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>Beacon (logement plus grand)</fullName>
            </value>
            <value>
                <fullName>Beacon(s) Réceptionné(s)</fullName>
            </value>
            <value>
                <fullName>Beacon (tv en plus)</fullName>
            </value>
            <value>
                <fullName>Beacon (vehicule supplémentaire)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>