force-app/main/default/objects/Case/fields/Sous_type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_d_intervention__c</fullName>
    <label>Sous-type d&apos;intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PaME</fullName>
            </value>
            <value>
                <fullName>Médiamat</fullName>
            </value>
            <value>
                <fullName>Mediamat et PaME</fullName>
            </value>
            <value>
                <fullName>Visite de courtoisie</fullName>
            </value>
            <value>
                <fullName>Changement d&apos;équipements</fullName>
            </value>
            <value>
                <fullName>Connexion</fullName>
            </value>
            <value>
                <fullName>Equipements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>