force-app/main/default/objects/Case/fields/Sous_type_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_de_controle__c</fullName>
    <label>Sous type de contrôle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>13</fullName>
                <label>Anomalie des données en base panel</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Anomalie lors du traitement des données d&apos;audience</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Audience individuelle &gt; 9h</label>
            </value>
            <value>
                <fullName>Audimètre non connecté</fullName>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Individu sans activité Web cohérente</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Individus sans audience depuis 28 jours ou plus</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Foyers sans audience depuis 6 jours ou plus</label>
            </value>
            <value>
                <fullName>Foyer avec audience sans abo</fullName>
            </value>
            <value>
                <fullName>Foyer avec abo C+ sans audience</fullName>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Foyer sans activité routeur</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Foyer sans activité Web cohérente</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Non envoyé au Médiamat</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Rejeté Médiamat</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>TV On &gt; 12h</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Autres usages</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Audience incohérente</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Autre CauseTechnique</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Foyer vacancier longue durée</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Foyers non connectés</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Participation Audience Individuelle 6h-9h</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Perte abonnement</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Absence mouvement</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Absence collecte</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Pager OFF</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Pager éteint trop longtemps</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Autres</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Tous beacons inactifs</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Tous beacons &lt;20%</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Au moins 1 beacon inactif</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>Indice de qualité faible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>