force-app/main/default/objects/Case/fields/Tech_AllIsTreated__c.field-meta.xml
<CustomField>
    <fullName>Tech_AllIsTreated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tech_AllIsTreated</label>
    <type>Checkbox</type>
</CustomField>