force-app/main/default/objects/Case/fields/Tech_Nb_Controles__c.field-meta.xml
<CustomField>
    <fullName>Tech_Nb_Controles__c</fullName>
    <label>TECH_Nb_Contrôles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>