force-app/main/default/objects/Case/fields/TECH_Nb_Participation__c.field-meta.xml
<CustomField>
    <fullName>TECH_Nb_Participation__c</fullName>
    <label>TECH_Nb_Participation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>