force-app/main/default/objects/Case/fields/TECH_Tous_Non_Repondant__c.field-meta.xml
<CustomField>
    <fullName>TECH_Tous_Non_Repondant__c</fullName>
    <formula>IF(
				Tech_Nb_Controles__c - TECH_Nb_Non_Repondant__c = 0,
				true,
				false
)</formula>
    <label>TECH_Tous_Non_Repondant</label>
    <type>Checkbox</type>
</CustomField>